== 1.2.2 ==
*   Release date: December 20, 2017
*   New: Added WPML support

== 1.2.1 ==
*   Release date: November 29, 2017
*   Enhancement: Added toggle to enable/disable heading link in Smart Headings module
*   Fix: Stacked heading style was not working in Smart Headings module

== 1.2.0 ==
*   Release date: November 24, 2017
*   New: BB 2.0 compatibility with UI fields
*   Enhancement: Added Inline/Stacked options in Smart Heading module
*   Enhancement: Added alpha option for heading colors in Smart Heading module
*   Fix: Columns width in Contact Form 7 module
*   Fix: Hover text color issue in Dual Button module
*   Fix: Font Size and Line Height of description were sometime overridden by theme in Smart Heading module 
*   Fix: Icon size issue in Icon List module
*   Fix: Image max width issue in Info Box module

== 1.1.0 ==
*   Release date: August 30, 2017
*   New: Unlocked all features of the modules
*   Enhancement: Added BB 2.0 support
*   Enhancement: Added placeholder styling options in Contact Form 7 module
*   Enhancement: Updated admin settings panel
*   Fix: Minor CSS issue in Business Hours module
*   Fix: Minor CSS issue in Dual Button module
*   Fix: Minor CSS issue in Smart Heading module
*   Fix: Minor CSS issue in Icon List module

== 1.0.7 ==
*   Release date: May 25, 2017
*   New: Added field connections
*   Fix: CSS fixes in Business Hours module

== 1.0.6 ==
*   Release date: March 30, 2017
*   New: Added Divider module

== 1.0.5 ==
*   Release date: February 2, 2017
*   New: Added gradient as a row background option
*   Fix: PHP warning in Business Hours module

== 1.0.4 ==
*   Release date: December 31, 2016
*   Enhancement: Added schema markup in Business Hours module
*   Fix: Spacing issue in Business Hours module

== 1.0.3 ==
*   Release date: December 26, 2016
*   Added new module: Business Hours

== 1.0.2 ==
*   Release date: November 25, 2016
*   Added new module: Fancy Heading

== 1.0.1 ==
*   Release date: October 4, 2016