@@ -22,6 +22,7 @@ class PPContactForm7Module extends FLBuilderModule {
             'url'           => BB_POWERPACK_URL . 'modules/pp-contact-form-7/',
             'editor_export' => true, // Defaults to true and can be omitted.
             'enabled'       => true, // Defaults to true and can be omitted.
+            'icon'				=> 'editor-table.svg',
         ));
     }
 }
