@@ -22,6 +22,7 @@ class PPDualButtonModule extends FLBuilderModule {
             'url'           => BB_POWERPACK_URL . 'modules/pp-dual-button/',
             'editor_export' => true, // Defaults to true and can be omitted.
             'enabled'       => true, // Defaults to true and can be omitted.
+            'icon'				=> 'button.svg',
         ));
     }
 
@@ -59,7 +60,16 @@ FLBuilder::register_module('PPDualButtonModule', array(
 							'_self'         => __('Same Window', 'bb-powerpack'),
                             '_blank'        => __('New Window', 'bb-powerpack'),
 						),
-					),
+                    ),
+                    'link_no_follow_1'	=> array(
+						'type'				=> 'pp-switch',
+						'label'				=> __('Link No Follow', 'bb-powerpack'),
+						'default'			=> 'no',
+						'options'			=> array(
+							'yes'				=> __('Yes', 'bb-powerpack'),
+							'no'				=> __('No', 'bb-powerpack')
+						)
+                    ),
                     'button_icon_select_1'       => array(
                         'type'          => 'pp-switch',
 						'label'         => __('Icon Type', 'bb-powerpack'),
@@ -170,7 +180,16 @@ FLBuilder::register_module('PPDualButtonModule', array(
                             '_self'         => __('Same Window', 'bb-powerpack'),
 							'_blank'        => __('New Window', 'bb-powerpack'),
 						),
-					),
+                    ),
+                    'link_no_follow_2'	=> array(
+						'type'				=> 'pp-switch',
+						'label'				=> __('Link No Follow', 'bb-powerpack'),
+						'default'			=> 'no',
+						'options'			=> array(
+							'yes'				=> __('Yes', 'bb-powerpack'),
+							'no'				=> __('No', 'bb-powerpack')
+						)
+                    ),
                     'button_icon_select_2'       => array(
                         'type'          => 'pp-switch',
 						'label'         => __('Icon Type', 'bb-powerpack'),
