@@ -22,6 +22,7 @@ class PPFancyHeadingModule extends FLBuilderModule {
             'url'           => BB_POWERPACK_URL . 'modules/pp-fancy-heading/',
             'editor_export' => true, // Defaults to true and can be omitted.
             'enabled'       => true, // Defaults to true and can be omitted.
+            'icon'				=> 'text.svg',
         ));
     }
 }
