@@ -21,7 +21,8 @@ class PPIconListModule extends FLBuilderModule {
             'url'           => BB_POWERPACK_URL . 'modules/pp-iconlist/',
             'editor_export' => true, // Defaults to true and can be omitted.
             'enabled'       => true, // Defaults to true and can be omitted.
-            'partial_refresh'   => true
+            'partial_refresh'   => true,
+            'icon'				=> 'star-filled.svg',
         ));
 
 		$this->add_css('font-awesome');
